<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>language</name>
  <version>0.0.0</version>
  <description>Instruction parser for FleetLang</description>
  <maintainer email="abdulhannan220105@gmail.com">hannan</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
